--- a/smashbath/backend/package.json
+++ b/smashbath/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.5.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   }
 }
